Add display all post after click in ALL POSTS subtitle

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="logo">my blog</h1>
         <main class="wrapper">
           <aside class="sidebar">
-            <h2 class="section-title">All posts</h2>
+            <h2 class="section-title" id="all-posts">All posts</h2>
             <ul class="list titles">
             </ul>
           </aside>
